# word4you

./: .gitignore  BUILD_STANDALONE.md  CLAUDE.md  LICENSE  Makefile  README.md  build_standalone.py  config.py  env.example  gemini_client.py  hook-google.py  main.py  package-lock.json  pyproject.toml  requirements-build.txt  requirements.txt  run_word4you.sh  sync_binary.sh  word4you.spec  word_processor.py  wordbook.md
.claude/: settings.local.json
.cursor/rules/: commit.mdc  environment.mdc
.github/workflows/: build-release.yml
scripts/: dev.sh
word4you-cli/: .env.example  Cargo.toml  QWEN_SETUP.md  README.md  vocabulary_notebook.md
word4you-cli/examples/: classification_demo.rs
word4you-cli/src/: ai_client.rs  config.rs  config_manager.rs  gemini_client.rs  git_section_detector.rs  git_section_sync.rs  git_utils.rs  main.rs  prompt_templates.rs  qwen_client.rs  text_processor.rs  utils.rs  word_processor.rs
word4you-extension/: .eslintrc.js  README.md  package.json  raycast-env.d.ts
word4you-extension-raycast/: CHANGELOG.md  README.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
word4you-extension-raycast/assets/: word4you
word4you-extension-raycast/src/: compose-words.tsx  config.ts  learn-word.tsx  query-word.tsx  word4you.tsx
word4you-extension-raycast/src/components/: ComposedSentenceDetail.tsx  WordDetail.tsx  WordListItem.tsx
word4you-extension-raycast/src/hooks/: useCliSetup.ts  useComposeWords.ts  useSavedWords.ts  useWordDelete.ts  useWordFiltering.ts  useWordSave.ts  useWordSearch.ts  useWordUpdate.ts  useWords.ts
word4you-extension-raycast/src/services/: cliManager.ts  wordService.ts
word4you-extension-raycast/src/types/: index.ts
word4you-extension-raycast/src/utils/: downloadUtils.ts  execUtils.ts
word4you-extension-raycast/src/views/: ComposeWordsEmptyView.tsx  ComposeWordsErrorView.tsx  ComposeWordsLoadingView.tsx  InstallationView.tsx  ProviderSetupView.tsx  WordListView.tsx
word4you-extension/assets/: word4you
word4you-extension/src/: learn-word.tsx
word4you-python/: BUILD_STANDALONE.md  README.md  config.py  env.example  main.py  pyproject.toml  utils.py  vocabulary_notebook.md  word4you.spec  word_processor.py  wordbook.md
word4you-rust/: .env.example  Cargo.toml  README.md  env.example  vocabulary_notebook.md  wordbook.md
word4you-rust/src/: config.rs  gemini_client.rs  main.rs  utils.rs  word_processor.rs
