[project]
name = "word4you"
version = "1.0.0"
description = "A CLI tool for learning English words with AI-powered explanations using Google Gemini"
authors = [
    {name = "Word4You Team", email = "team@word4you.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-generativeai==0.3.2",
    "python-dotenv==1.0.0",
    "click==8.1.7",
    "rich==13.7.0",
    "gitpython==3.1.41",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"] 