[package]
name = "word4you"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A command-line tool for learning English words with AI-powered explanations using Google Gemini"
license = "MIT"

[[bin]]
name = "word4you"
path = "src/main.rs"

[dependencies]
regex = "1.10.2"# CLI framework
clap = { version = "4.4", features = ["derive"] }

# HTTP client for Gemini API
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async trait support
async-trait = "0.1"

# Configuration handling

# Terminal UI and formatting
console = "0.16.0"
dialoguer = "0.11"
termimad = "0.33.0"

# File and path handling
anyhow = "1.0"
directories = "5.0"
toml = "0.8.8"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[profile.release]
strip = true          # Remove debug symbols
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller panic handler 