[package]
name = "word4you"
version = "1.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A command-line tool for learning English words with AI-powered explanations using Google Gemini"
license = "MIT"

[[bin]]
name = "word4you"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# HTTP client for Gemini API
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time"] }

# JSON handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# Terminal UI and formatting
console = "0.15"
dialoguer = "0.11"
termimad = "0.28"

# File and path handling
anyhow = "1.0"

# Git integration
git2 = "0.18"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
strip = true          # Remove debug symbols
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller panic handler 